--- a/src/views/index.html
+++ b/src/views/index.html
@@ -17,7 +17,7 @@
                     <p>today time ...</p>
                 </div>
                 <div class="todo">
-                    <p>todo history ...</p>
+                    <div class="todoItem"></div>
                 </div>
                 <div class="options">
                     <div class="options_btn"></div>
@@ -77,8 +77,6 @@
         </div>
     </div>
 </body>
-
-<script src="../runtime.js"></script>
 <script src="../render/index.js"></script>
 
 </html>
