--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,18 +15,11 @@
             <div class="left">
                 <div class="date">
                     <p>today time ...</p>
+                    <p>111</p>
                 </div>
                 <div class="todo">
+                    <p>vault ...</p>
                     <div class="todoItem"></div>
-                </div>
-                <div class="options">
-                    <div class="options_btn"></div>
-                    <div class="options_selections">
-                        <p>reload</p>
-                        <p>developer kit</p>
-                        <p>about</p>
-                        <p>exit</p>
-                    </div>
                 </div>
 
             </div>
@@ -51,6 +44,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="chooseTime">
                     chooseYears and months :
                     <select name="chooseYears" id="chooseYears">
@@ -72,6 +66,15 @@
                         <option value="11">Nov.</option>
                         <option value="12">Dec.</option>
                     </select>
+                    <div class="options">
+                        <div class="options_btn"></div>
+                        <div class="options_selections">
+                            <p>reload</p>
+                            <p>developer kit</p>
+                            <p>about</p>
+                            <p>exit</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
