--- a/src/css/index.css
+++ b/src/css/index.css
@@ -49,10 +49,13 @@ body,
     text-align: center;
 }
 
-.date p {
-    font-size: 30px;
-    line-height: 60px;
-
+.date p:nth-of-type(1) {
+    font-size: 24px;
+    color: #4e4e4e;
+}
+.date p:nth-of-type(2) {
+    font-size: 20px;
+    color: #4e4e4e;
 }
 
 .todo {
@@ -66,10 +69,18 @@ body,
     padding: 5px;
 }
 
+.todo p {
+    width: 100%;
+    height: 30px;
+    display: block;
+    padding: 5px;
+    line-height: 30px;
+    text-align: left;
+}
+
 .todoItem {
     width: 100%;
     height: 660px;
-    margin-top: 30px;
     border: 2px solid #e4e4e4;
     border-radius: 5px;
 }
@@ -179,7 +190,7 @@ body,
 }
 
 .chooseTime {
-    width: 390px;
+    width: 440px;
     height: 45px;
     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     position: absolute;
@@ -187,10 +198,12 @@ body,
     right: 10px;
     border-radius: 5px;
     opacity: 0.6;
-    padding-top: 11px;
-    padding-left: 11px;
+    padding-left: 5px;
     border-top-right-radius: 0;
     border-bottom-left-radius: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #chooseYears,
@@ -205,17 +218,17 @@ body,
 
 
 .options {
-    width: 250px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
 }
 
 .options_btn {
-    width: 32px;
-    height: 32px;
-    position: absolute;
+    width: 30px;
+    height: 30px;
     bottom: 5px;
     left: calc(50% - 16px);
     border-radius: 50%;
@@ -223,8 +236,9 @@ body,
     background-repeat: no-repeat;
     background-size: 100% 100%;
     cursor: pointer;
-    opacity: 0.8;
-    filter: invert(0.1);
+    opacity: 0.9;
+    transition: all 0.5s;
+
 }
 
 .options_selections {
@@ -232,31 +246,30 @@ body,
     width: 140px;
     height: 200px;
     background-image: linear-gradient(to bottom, #F3F3F3 0%, #eef1f5 50%, #fff 100%);
-    left: calc(50% - 14px);
-    bottom: 50px;
+    right: 5px;
+    bottom: 60px;
     border-radius: 5px;
-    border-bottom-left-radius: 0;
-    font-size: 14px;
+    border-bottom-right-radius: 0;
     padding: 5px;
     display: none;
     opacity: 0.9;
+    transition: all 0.5s;
 }
 
 .options_selections p {
+    font-size: 16px;
     display: block;
     text-align: center;
     height: 22px;
     line-height: 22px;
-    margin-top: 12px;
-    border-bottom: 1px solid red;
-    border-radius: 5px;
+    margin-top: 5px;
     cursor: pointer;
-
 }
 
 .options_selections p:hover {
-    background-color: red;
+    background-color: blueviolet;
     color: white;
+    border-radius: 5px;
 }
 
 .options_selections::before {
@@ -270,5 +283,5 @@ body,
     border-left-color: transparent;
     border-right-color: transparent;
     bottom: -30px;
-    left: 0;
+    right: 0px;
 }
