--- a/src/css/index.css
+++ b/src/css/index.css
@@ -47,12 +47,31 @@ body,
     border-radius: 5px;
     padding: 20px;
     text-align: center;
+    position: relative;
+    transition: all 0.5s;
+}
+
+.date span {
+    display: block;
+    width: 16px;
+    height: 16px;
+    background: url('../../assets/icon/restart-line.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    filter: invert(0.2);
+    cursor: pointer;
+    opacity: 0.9;
+    transition: all 0.5s;
 }
 
 .date p:nth-of-type(1) {
     font-size: 24px;
     color: #4e4e4e;
 }
+
 .date p:nth-of-type(2) {
     font-size: 20px;
     color: #4e4e4e;
