--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,6 +16,7 @@
                 <div class="date">
                     <p>today time ...</p>
                     <p>111</p>
+                    <span></span>
                 </div>
                 <div class="todo">
                     <p>vault ...</p>
