--- a/src/views/index.html
+++ b/src/views/index.html
@@ -40,9 +40,8 @@
                                 <p>Lunar</p>
                             </div>
                         </div>
-                        <div class="days_process_container">
-                            <span class="days_process"></span>
-                        </div>
+                        <div class="days_process"></div>
+                        <div class="days_more"></div>
                     </div>
                 </div>
                 
