--- a/src/css/index.css
+++ b/src/css/index.css
@@ -129,6 +129,7 @@ body,
     padding: 10px;
     border: 1px solid #e4e4e4;
     position: relative;
+    transition: all 0.5s;
 }
 
 
@@ -204,6 +205,7 @@ body,
 }
 
 .days_time {
+    float: left;
     width: 100%;
     height: 50px;
     text-align: center;
@@ -253,6 +255,7 @@ body,
     align-items: center;
     justify-content: center;
     position: relative;
+    
 }
 
 .options_btn {
@@ -265,7 +268,6 @@ body,
     background-repeat: no-repeat;
     background-size: 100% 100%;
     cursor: pointer;
-    opacity: 0.9;
     transition: all 0.5s;
 
 }
@@ -281,7 +283,6 @@ body,
     border-bottom-right-radius: 0;
     padding: 5px;
     display: none;
-    opacity: 0.9;
     transition: all 0.5s;
 }
 
