--- a/src/views/index.html
+++ b/src/views/index.html
@@ -26,14 +26,12 @@
             </div>
             <div class="right">
                 <div class="daysContainer">
-                    
+
                 </div>
-                
+
                 <div class="chooseTime">
                     choose Years and months :
                     <select name="chooseYears" id="chooseYears">
-                        <option value="2020">2020</option>
-                        <option value="2021">2021</option>
                         <option value="2022">2022</option>
                     </select>
                     <select name="chooseMonths" id="chooseMonths">
@@ -64,6 +62,6 @@
         </div>
     </div>
 </body>
-<script src="../render/index.js"></script>
+<script src="../render/Index.js"></script>
 
 </html>
